google driveを使うように処理を変更

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -80,7 +80,7 @@
         "\n",
         "clear_output()\n",
         "progbar_desc = HTML(value=\"必要モジュールをインストールしています...\")\n",
-        "init_progressbar = IntProgress(value=0,min=0,max=5)\n",
+        "init_progressbar = IntProgress(value=0,min=0,max=3)\n",
         "display(VBox([progbar_desc, init_progressbar]))\n",
         "try:\n",
         "  import py7zr\n",
@@ -556,42 +556,66 @@
         "      return False, b\"\"\n",
         "    return True, r.content\n",
         "\n",
-        "subprocs = {}\n",
-        "if not os.path.isfile(\"engines/linux-cpu/run\"):\n",
-        "  init_progressbar.value = 1\n",
+        "def get_voicevox_engine(save_path):\n",
+        "  global init_progressbar\n",
+        "  global progbar_desc\n",
         "  progbar_desc.value = \"VOICEVOXエンジンをダウンロードしています...\"\n",
         "  try:\n",
         "    r = requests.get(\"https://github.com/Hiroshiba/voicevox_engine/releases/download/0.8.0/linux-cpu.7z.001\")\n",
         "    if r.status_code != 200:\n",
-        "      raise Exception\n",
+        "      raise Exception(f\"エンジンのダウンロードに失敗しました({r.status_code})。\")\n",
         "  except Exception:\n",
         "    init_progressbar.bar_style = \"danger\"\n",
         "    print(\"VOICEVOXエンジンのダウンロードに失敗しました。ランタイムを出荷時状態にリセットし、再度実行してください。\")\n",
-        "    sys.exit(1)\n",
+        "    raise\n",
+        "  progbar_desc.value = \"VOICEVOXエンジンを展開しています...\"\n",
         "  with TemporaryFile() as f:\n",
         "    f.write(r.content)\n",
         "    f.seek(0)\n",
-        "    init_progressbar.value = 2\n",
-        "    progbar_desc.value = \"ダウンロードしたファイルを解凍しています...\"\n",
         "    with py7zr.SevenZipFile(f, \"r\") as f:\n",
-        "      f.extractall(path=\"engines/\")\n",
-        "  init_progressbar.value = 3\n",
-        "  progbar_desc.value = \"ファイルに実行権限を付与しています...\"\n",
-        "  subprocess.run([\"chmod\", \"755\", \"engines/linux-cpu/run\"])\n",
-        "init_progressbar.value = 4\n",
-        "progbar_desc.value = \"VOICEVOXエンジンを起動しています...\"\n",
-        "vv_proc = multiprocessing.Process(target=subprocess.run, args=([\"engines/linux-cpu/run\"],), daemon=True)\n",
-        "vv_proc.start()\n",
-        "subprocs[\"VOICEVOX\"] = vv_proc\n",
-        "init_progressbar.value = 5\n",
-        "progbar_desc.value = \"VOICEVOXエンジンの起動を待っています...\"\n",
-        "while True:\n",
-        "  time.sleep(0.1)\n",
-        "  try:\n",
-        "    r = requests.get(\"http://127.0.0.1:50021/speakers\", timeout=0.2)\n",
-        "  except Exception:\n",
-        "    continue\n",
-        "  break\n",
+        "      f.extractall(path=save_path)\n",
+        "  os.rename(save_path+\"linux-cpu\", save_path+\"voicevox\")\n",
+        "  subprocess.run([\"chmod\", \"755\", save_path+\"voicevox/run\"])\n",
+        "\n",
+        "def setup_engine():\n",
+        "  global init_progressbar\n",
+        "  global progbar_desc\n",
+        "  progbar_desc.value = \"VOICEVOXエンジンをセットアップしています...\"\n",
+        "  ret_path = {}\n",
+        "  if os.path.isdir(\"drive/MyDrive/voicevox_on_colab/engines/voicevox\"):\n",
+        "    ret_path[\"VOICEVOX\"] = \"drive/MyDrive/voicevox_on_colab/engines/voicevox/run\"\n",
+        "  elif os.path.isdir(\"drive/MyDrive\"):\n",
+        "    get_voicevox_engine(\"drive/MyDrive/voicevox_on_colab/engines/\")\n",
+        "    ret_path[\"VOICEVOX\"] = \"drive/MyDrive/voicevox_on_colab/engines/voicevox/run\"\n",
+        "  elif os.path.isdir(\"engines/voicevox\"):\n",
+        "    ret_path[\"VOICEVOX\"] = \"engines/voicevox/run\"\n",
+        "  else:\n",
+        "    get_voicevox_engine(\"engines/\")\n",
+        "    ret_path[\"VOICEVOX\"] = \"engines/voicevox/run\"\n",
+        "  init_progressbar.value += 1\n",
+        "  return ret_path\n",
+        "\n",
+        "def wait_engine():\n",
+        "  global init_progressbar\n",
+        "  global progbar_desc\n",
+        "  for port in ((50021,)):\n",
+        "    progbar_desc.value = f\"エンジンの起動を待っています({port})...\"\n",
+        "    while True:\n",
+        "      time.sleep(0.1)\n",
+        "      try:\n",
+        "        r = requests.get(f\"http://127.0.0.1:{port}/speakers\", timeout=0.2)\n",
+        "      except Exception:\n",
+        "        continue\n",
+        "      break\n",
+        "  init_progressbar.value += 1\n",
+        "\n",
+        "subprocs = {}\n",
+        "engine_paths = setup_engine()\n",
+        "for k in engine_paths.keys():\n",
+        "  _p = multiprocessing.Process(target=subprocess.run, args=([engine_paths[k]],), daemon=True)\n",
+        "  _p.start()\n",
+        "  subprocs[k] = _p\n",
+        "wait_engine()\n",
         "_=MainGUI()"
       ],
       "execution_count": null,
