コードからマウントするように変更

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -17,23 +17,32 @@
     "Google Driveと連携することによって、VOICEVOXエンジンのダウンロードを省略することができ、起動時間を短縮できるようになります。   \n",
     "現時点では1.1GB使用します。（将来的に増える可能性があります）   \n",
     "\n",
-    "#### 共通\n",
-    "0. 以下をGoogleアカウントにインストールする。  \n",
-    "https://workspace.google.com/u/1/marketplace/app/colaboratory/1014160490159  \n",
-    "\n",
-    "#### PC \n",
-    "1. 左側にあるファイルアイコンをクリック\n",
-    "2. 少し待つ（ランタイムの起動を待つ必要があります）\n",
-    "3. ドライブのマークがついたフォルダのアイコンをクリック\n",
-    "4. ダイアログが出るので、「Google ドライブに接続」をクリック\n",
-    "\n",
-    "#### スマホ\n",
-    "1. 左上部に「三」のマークがない場合は右上の「∨」をタップ\n",
-    "2. 左上部の「三」のマークをタップ\n",
-    "3. 「ファイルブラウザを表示」をタップ\n",
-    "4. 少し待つ（ランタイムの起動を待つ必要があります）\n",
-    "5. ドライブのマークがついたフォルダのアイコンをクリック\n",
-    "6. ダイアログが出るので、「Google ドライブに接続」をクリック\n"
+    "#### 実行方法\n",
+    "↓の再生ボタンをクリックします。  \n",
+    "URLと入力欄が表示されるので、URLのリンク先に飛んで認証を済ませ、発行されたコードをコピーして入力欄に貼り付けてください。  \n",
+    "`Mounted at /content/drive`と表示されればOKです。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "import os\n",
+    "if os.path.isdir(\"/content/drive\"):\n",
+    "  print(\"Mounted at /content/drive\")\n",
+    "else:\n",
+    "  drive.mount(\"/content/drive\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### メインプログラム\n",
+    "↓の再生ボタンをクリックすると実行できます。"
    ]
   },
   {
