--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "### Google Driveとの連携\n",
     "Google Driveと連携することによって、VOICEVOXエンジンのダウンロードを省略することができ、起動時間を短縮できるようになります。   \n",
-    "現時点では1.1GB使用します。（将来的に増える可能性があります）   \n",
+    "voicevox_on_colabフォルダ内を使用します。その他のフォルダは読み書きしません。  \n",
+    "現時点では約1.1GB容量を消費します。（将来的に増える可能性があります）     \n",
     "\n",
     "#### 実行方法\n",
     "↓の再生ボタンをクリックします。  \n",
