サンプリングレート変更

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -217,7 +217,10 @@
     "      )\n",
     "      if not ret:\n",
     "        return\n",
-    "      display(Audio(data=wav, autoplay=True))\n",
+    "      with open(\"tmp.wav\", \"wb\") as f:\n",
+    "        f.write(wav)\n",
+    "      subprocess.run([\"ffmpeg\", \"-i\", \"tmp.wav\", \"-ar\", \"44100\", \"tmp2.wav\"])\n",
+    "      display(Audio(\"tmp2.wav\", autoplay=True))\n",
     "\n",
     "  def synthesis_main(self, b):\n",
     "    texts = []\n",
