ファイル名を動的にする

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -170,6 +170,7 @@
     "    self.synthesis_main(None)\n",
     "    self.last_datas_key = None\n",
     "    self.default_speaker = 0\n",
+    "    self.output_count = 0\n",
     "\n",
     "  def lock_widget(s):\n",
     "    def _lock_widget(func):\n",
@@ -205,8 +206,10 @@
     "        return\n",
     "      with open(\"tmp_output.wav\", \"wb\") as f:\n",
     "        f.write(wav)\n",
-    "      subprocess.run([\"ffmpeg\", \"-y\", \"-i\", \"tmp_output.wav\", \"-ar\", \"44100\", \"output.wav\"])\n",
-    "      files.download(\"output.wav\")\n",
+    "      self.output_count += 1\n",
+    "      output_name = f\"{str(self.output_count).zfill(3)}_{Defines.speakers[(self.synth_datas[self.last_datas_key][1], self.synth_datas[self.last_datas_key][2])]}_{self.synth_datas[self.last_datas_key][3]}.wav\"\n",
+    "      subprocess.run([\"ffmpeg\", \"-y\", \"-i\", \"tmp_output.wav\", \"-ar\", \"44100\", output_name])\n",
+    "      files.download(output_name)\n",
     "\n",
     "  @lock_widget(\"play\")\n",
     "  def play(self, b):\n",
