ファイル名修正

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -56,6 +56,7 @@
     "#@title\n",
     "import copy\n",
     "import random\n",
+    "import re\n",
     "import sys\n",
     "import os\n",
     "import psutil\n",
@@ -207,7 +208,8 @@
     "      with open(\"tmp_output.wav\", \"wb\") as f:\n",
     "        f.write(wav)\n",
     "      self.output_count += 1\n",
-    "      output_name = f\"{str(self.output_count).zfill(3)}_{Defines.speakers[(self.synth_datas[self.last_datas_key][1], self.synth_datas[self.last_datas_key][2])]}_{self.synth_datas[self.last_datas_key][3]}.wav\"\n",
+    "      fixed_filename = re.sub(r'[\\\\/:*?\"<>|]+', '', self.synth_datas[self.last_datas_key][3])\n",
+    "      output_name = f\"{str(self.output_count).zfill(3)}_{Defines.speakers[(self.synth_datas[self.last_datas_key][1], self.synth_datas[self.last_datas_key][2])]}_{fixed_filename}.wav\"\n",
     "      subprocess.run([\"ffmpeg\", \"-y\", \"-i\", \"tmp_output.wav\", \"-ar\", \"44100\", output_name])\n",
     "      files.download(output_name)\n",
     "\n",
