セルの削除ボタンを追加

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -312,6 +312,11 @@
     "    self.synth_datas[change.owner.id] = (audio_query, new_speaker, new_port, self.synth_datas[change.owner.id][3])\n",
     "    self.synthesis(ButtonWithId(id=change.owner.id))\n",
     "\n",
+    "  def rm_cell(self, b):\n",
+    "    del self.synth_datas[b.id]\n",
+    "    self.last_datas_key = None\n",
+    "    self.synthesis_main(None)\n",
+    "\n",
     "  def synthesis(self, b):\n",
     "    self.last_datas_key = b.id\n",
     "    synthesis_text = TextWithId(id=b.id, value=self.synth_datas[b.id][3], continuous_update=False)\n",
@@ -381,7 +386,9 @@
     "      description=\"終了無音\"\n",
     "    )\n",
     "    postpl.observe(self.update_base_param, names=\"value\")\n",
-    "    p1 = VBox([synthesis_text, cdd, ss, ps, ints, vs, prepl, postpl], layout=Layout(width=\"auto\"))\n",
+    "    btn_rmcell = ButtonWithId(id=b.id, description=\"削除\")\n",
+    "    btn_rmcell.on_click(self.rm_cell)\n",
+    "    p1 = VBox([synthesis_text, cdd, ss, ps, ints, vs, prepl, postpl, btn_rmcell], layout=Layout(width=\"auto\"))\n",
     "\n",
     "    self.editors = []\n",
     "    editors_width = 0\n",
