画面がフラッシュしないように変更

--- a/VOICEVOX_on_Colab.ipynb
+++ b/VOICEVOX_on_Colab.ipynb
@@ -159,8 +159,8 @@
     "        HTML(value=\"<hr>\"+css)\n",
     "      ]\n",
     "    )\n",
-    "    clear_output()\n",
-    "    self.display_handle = display(VBox([self.header, VBox([])]), display_id=True)\n",
+    "    self.main_widgets = VBox([self.header, VBox([])])\n",
+    "    self.display_handle = display(self.main_widgets, display_id=True)\n",
     "    # 新規の入力欄\n",
     "    self.input_new_text = Text(placeholder=\"音声合成したい文章を入力\", layout=Layout(width=\"30em\"))\n",
     "    self.btn_confirm_new_text = Button(description=\"追加\", layout=Layout(width=\"auto\", border=\"solid 1px\"))\n",
@@ -189,8 +189,7 @@
     "    return _lock_widget\n",
     "\n",
     "  def update_layout(self, body):\n",
-    "    clear_output()\n",
-    "    self.display_handle.update(VBox([self.header, body]))\n",
+    "    self.main_widgets.children = [self.header, body]\n",
     "\n",
     "  def update_default_speaker(self, change):\n",
     "    self.default_speaker = change.new\n",
@@ -626,6 +625,7 @@
     "  _p.start()\n",
     "  subprocs[k] = _p\n",
     "wait_engine()\n",
+    "clear_output()\n",
     "_=MainGUI()"
    ]
   }
